compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__extra_var_inalternative.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 550
expression: "case [1] { [x] | [x, y] -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case [1] { [x] | [x, y] -> 1 }

----- ERROR
error: Extra alternative pattern variable
  ┌─ /src/one/two.gleam:1:22
  │
1 │ case [1] { [x] | [x, y] -> 1 }
  │                      ^ Has not been previously defined

All alternative patterns must define the same variables as the initial
pattern. This variable `y` has not been previously defined.
