compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__fault_tolerant_negate_int.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 3086
expression: "\npub fn main() {\n  --{ 1 + a }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  --{ 1 + a }
}


----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:3:11
  │
3 │   --{ 1 + a }
  │           ^

The name `a` is not in scope here.
