compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__field_not_in_any_variant.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 623
expression: "\npub type Person {\n    Teacher(name: String, age: Int, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_height(person: Person) { person.height }"
snapshot_kind: text
---
----- SOURCE CODE

pub type Person {
    Teacher(name: String, age: Int, title: String)
    Student(name: String, age: Int)
}
pub fn get_height(person: Person) { person.height }

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:6:44
  │
6 │ pub fn get_height(person: Person) { person.height }
  │                                            ^^^^^^ This field does not exist

The value being accessed has this type:

    Person

It has these accessible fields:

    .age
    .name
